Revision history for Perl extension BZ::Client.

TBD
    - BZ::Client::logger protects its input
    - Add pod for more methods in BZ/Client.pm

1.064 Fr Sep 04 11:57 2015
    - BZ::Client::Test if it cant find a config file, it blesses a hash-ref rather than trying (and failing) to bless a scalar

1.063 Thu Sep 03 21:48:00 2015
    - Make PodWeaver do stuff
    - Strip out subroutine prototypes
    - Strip out $VERSION's so dzil can do it
    - Whitespace fixes all over
    - Use dist::zilla
    - Lots and lots of pod and tiny code style tweaks

1.061 Wed Apr 22 13:43:00 2015

    - Fix for RT103873
    - BZ::Client::Bugs - now uses wantarray

1.06 Thu Dec 12 14:06:00 2013
    - Applied patch from https://rt.cpan.org/Public/Bug/Display.html?id=78467, needs a test.
    - Applied patch from https://rt.cpan.org/Ticket/Display.html?id=78694, needs a test.

1.05 Fri Nov 29 14:11:00 2013
    - Applied patch from http://hg.mozilla.org/webtools/bzapi/raw-file/24eba717cf5b/patches/xmlrpc-fix.diff

1.04 Mon Aug 22 19:23:00 2011
    - Added support for dateTime via instances of DateTime

1.03 Wed Feb 03 13:22:00 2010
    - Added URI as a prerequisite to Makefile.PL.
    - Fixed missing $client in Bug.pm (RT ticket 54227)

1.02 Sat Aug 15 15:31:00 2009
    - Added LICENSE file to the distribution.

1.01 Mon Aug 10 17:31:00 2009
    - XML::Parser and XML::Writer now declared as dependencies.

1.0  Tue Jun 23 07:18:25 2009
    - Created
